--- a/app/src/main/resources/ScheduleGnome/nameSchedule.fxml
+++ b/app/src/main/resources/ScheduleGnome/nameSchedule.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -16,5 +17,7 @@
       </Text>
       <Button defaultButton="true" layoutX="207.0" layoutY="246.0" mnemonicParsing="false" onAction="#create" prefHeight="35.0" prefWidth="100.0" text="Create" />
       <Button layoutX="512.0" layoutY="246.0" mnemonicParsing="false" onAction="#cancel" prefHeight="35.0" prefWidth="100.0" text="Cancel" />
+      <RadioButton fx:id="springToggle" layoutX="400.0" layoutY="210.0" mnemonicParsing="false" text="Spring" />
+      <RadioButton fx:id="fallToggle" layoutX="329.0" layoutY="210.0" mnemonicParsing="false" selected="true" text="Fall" />
    </children>
 </AnchorPane>
