--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -5,11 +5,11 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
 <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.searchFXMLController">
@@ -51,8 +51,8 @@
                   <Label text="Friday" GridPane.columnIndex="5" />
                </children>
             </GridPane>
-            <ScrollPane prefHeight="301.0" prefWidth="797.0">
-              <content>
+            <Pane>
+               <children>
                   <GridPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="290.0" prefWidth="786.0">
                      <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.20001831054688" minWidth="10.0" prefWidth="139.20001831054688" />
@@ -82,8 +82,8 @@
                         <ComboBox fx:id="startTimeChoice" onAction="#search" prefWidth="150.0" promptText="Starts After" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                      </children>
                   </GridPane>
-              </content>
-            </ScrollPane>
+               </children>
+            </Pane>
         </items>
       </SplitPane>
       <Button fx:id="backButton" minWidth="53.0" mnemonicParsing="false" onAction="#back" prefHeight="35.0" prefWidth="53.0" text="Back" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
