--- a/app/src/main/resources/ScheduleGnome/compareSchedules.fxml
+++ b/app/src/main/resources/ScheduleGnome/compareSchedules.fxml
@@ -9,14 +9,13 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
 <AnchorPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.CompareFXMLController">
    <children>
-      <SplitPane dividerPositions="0.5" layoutX="16.0" layoutY="12.0" orientation="VERTICAL" prefHeight="434.0" prefWidth="622.0">
+      <SplitPane dividerPositions="0.5" layoutX="16.0" layoutY="12.0" orientation="VERTICAL" prefHeight="434.0" prefWidth="680.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <GridPane fx:id="calGrid1" gridLinesVisible="true" layoutX="-1.0" prefHeight="250.0" prefWidth="622.0">
+                  <GridPane fx:id="calGrid1" gridLinesVisible="true" layoutX="-1.0" prefHeight="212.0" prefWidth="678.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -26,7 +25,20 @@
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="-Infinity" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label prefHeight="17.0" prefWidth="101.0" text="        Monday" textAlignment="CENTER" GridPane.columnIndex="1" />
@@ -40,7 +52,7 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                <children>
-                  <GridPane fx:id="calGrid2" gridLinesVisible="true" prefHeight="249.0" prefWidth="620.0">
+                  <GridPane fx:id="calGrid2" gridLinesVisible="true" prefHeight="209.0" prefWidth="678.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -50,20 +62,29 @@
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="1.7976931348623157E308" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                   </GridPane>
                </children>
             </AnchorPane>
         </items>
       </SplitPane>
-      <ChoiceBox fx:id="schedule1" layoutX="641.0" layoutY="110.0" onInputMethodTextChanged="#updateFirstCal" prefWidth="150.0" />
+      <ChoiceBox fx:id="schedule1" layoutX="706.0" layoutY="110.0" onInputMethodTextChanged="#updateFirstCal" prefHeight="25.0" prefWidth="85.0" />
       <Button layoutX="726.0" layoutY="19.0" mnemonicParsing="false" onAction="#clickHome" text="Home" />
-      <ChoiceBox fx:id="schedule2" layoutX="642.0" layoutY="298.0" prefWidth="150.0" />
-      <Button layoutX="641.0" layoutY="151.0" mnemonicParsing="false" onAction="#updateFirstCal" text="View" />
+      <ChoiceBox fx:id="schedule2" layoutX="707.0" layoutY="299.0" prefHeight="25.0" prefWidth="87.0" />
+      <Button layoutX="707.0" layoutY="147.0" mnemonicParsing="false" onAction="#updateFirstCal" text="View" />
       <Button layoutX="205.0" layoutY="-30.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="642.0" layoutY="341.0" mnemonicParsing="false" onAction="#updateSecondCal" text="View" />
+      <Button layoutX="705.0" layoutY="341.0" mnemonicParsing="false" onAction="#updateSecondCal" text="View" />
    </children>
 </AnchorPane>
