--- a/app/src/main/resources/ScheduleGnome/loginScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/loginScene.fxml
@@ -12,25 +12,26 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Text?>
 
+<?import java.net.URL?>
 <StackPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.loginFXMLController">
    <children>
-      <GridPane alignment="CENTER" hgap="10" vgap="10" StackPane.alignment="CENTER">
+      <GridPane id="body" alignment="CENTER" hgap="10" vgap="10" StackPane.alignment="CENTER">
          <padding>
             <Insets bottom="10" left="25" right="25" top="25" />
          </padding>
-         <Text text="Welcome to ScheduleGnome!" GridPane.columnSpan="2" />
+          <GridPane id="rectangle" alignment="CENTER" hgap="10" vgap="10" StackPane.alignment="CENTER">
+         <Text id="welcomeTitle" text="SCHEDULE GNOME" GridPane.columnSpan="2" />
+               <Label id="usernameLabel" focusTraversable="false" text="Username:" GridPane.rowIndex="1" />
       
-               <Label focusTraversable="false" text="Username:" GridPane.rowIndex="1" />
+               <TextField fx:id="usernameField" GridPane.rowSpan="1" GridPane.columnIndex="1" GridPane.rowIndex="1" promptText="Enter username..." />
       
-               <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               <Label id="passwordLabel" focusTraversable="false" text="Password:" GridPane.rowIndex="2" />
       
-               <Label focusTraversable="false" text="Password:" GridPane.rowIndex="2" />
-      
-               <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="2" promptText="Enter password..."/>
       
                <HBox alignment="CENTER" spacing="44.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-            <Button alignment="TOP_LEFT" defaultButton="true" onAction="#loginButton" text="Login" />
-            <Button layoutX="107.0" layoutY="10.0" onAction="#registerButton" text="Register" />
+            <Button id="loginButton" alignment="TOP_LEFT" defaultButton="true" onAction="#loginButton" text="Login" />
+            <Button id="registerButton" layoutX="107.0" layoutY="10.0" onAction="#registerButton" text="Register" />
          </HBox>
       
                <Text fx:id="actiontarget" textAlignment="RIGHT" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6" />
@@ -47,6 +48,10 @@
             <RowConstraints />
             <RowConstraints />
          </rowConstraints>
+          </GridPane>
       </GridPane>
    </children>
+<!--    <stylesheets>-->
+<!--        <URL value="@loginPage.css" />-->
+<!--    </stylesheets>-->
 </StackPane>
