--- a/app/src/main/resources/ScheduleGnome/savedScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/savedScene.fxml
@@ -2,11 +2,11 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import org.controlsfx.control.GridView?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.savedFXMLController">
    <children>
@@ -16,7 +16,7 @@
             <Font name="Arial Nova Light" size="47.0" />
          </font>
       </Text>
-      <Button layoutX="656.0" layoutY="142.0" mnemonicParsing="false" onAction="#clickNew" prefHeight="31.0" prefWidth="113.0" text="New">
+      <Button layoutX="655.0" layoutY="130.0" mnemonicParsing="false" onAction="#clickNew" prefHeight="52.0" prefWidth="113.0" text="New">
          <font>
             <Font name="Arial Nova Light" size="22.0" />
          </font>
@@ -30,10 +30,9 @@
          <font>
             <Font size="14.0" />
          </font></Text>
-      <ListView fx:id="listView" layoutX="116.0" layoutY="182.0" prefHeight="232.0" prefWidth="229.0" />
-      <Label layoutX="162.0" layoutY="161.0" prefHeight="23.0" prefWidth="138.0" text="Saved Schedules" textAlignment="CENTER">
+      <Label layoutX="18.0" layoutY="120.0" prefHeight="47.0" prefWidth="334.0" text="Choose a Schedule">
          <font>
-            <Font name="Arial Nova Light" size="18.0" />
+            <Font size="38.0" />
          </font>
       </Label>
       <Button alignment="CENTER" layoutX="518.0" layoutY="35.0" mnemonicParsing="false" onAction="#clickProfile" prefHeight="52.0" prefWidth="113.0" text="Profile">
@@ -41,6 +40,11 @@
             <Font name="MT Extra" size="21.0" />
          </font>
       </Button>
-      <Button layoutX="494.0" layoutY="148.0" mnemonicParsing="false" onAction="#compareSchedules" prefHeight="36.0" prefWidth="125.0" text="Compare Schedules " />
+      <Button alignment="CENTER" layoutX="518.0" layoutY="130.0" mnemonicParsing="false" onAction="#compareSchedules" prefHeight="52.0" prefWidth="113.0" text="Compare">
+         <font>
+            <Font name="MT Extra" size="21.0" />
+         </font>
+      </Button>
+      <GridView fx:id="grid" layoutX="18.0" layoutY="190.0" prefHeight="243.0" prefWidth="576.0" />
    </children>
 </AnchorPane>
