--- a/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/searchScheduleScene.fxml
@@ -59,8 +59,8 @@
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="208.99998779296874" minWidth="10.0" prefWidth="174.5999755859375" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="164.60001220703123" minWidth="10.0" prefWidth="96.79998779296875" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.20002441406245" minWidth="10.0" prefWidth="120.0000122070312" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.79998779296875" minWidth="10.0" prefWidth="128.800048828125" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.0" minWidth="10.0" prefWidth="113.199951171875" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="139.79998779296875" minWidth="10.0" prefWidth="98.66670735677087" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.99995930989587" minWidth="10.0" prefWidth="147.99995930989587" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints maxHeight="105.39998168945313" minHeight="9.800013160705568" prefHeight="48.40000610351562" vgrow="SOMETIMES" />
@@ -68,7 +68,7 @@
                         <RowConstraints maxHeight="199.19998168945312" minHeight="10.0" prefHeight="199.19998168945312" vgrow="ALWAYS" />
                      </rowConstraints>
                      <padding>
-                        <Insets left="15.0" />
+                        <Insets left="15.0" right="20.0" />
                      </padding>
                      <children>
                         <TextField fx:id="searchField" onAction="#search" promptText="Search for courses" GridPane.columnSpan="2147483647">
@@ -76,9 +76,15 @@
                               <Insets left="50.0" right="50.0" />
                            </GridPane.margin>
                         </TextField>
-                        <ListView fx:id="searchList" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS" />
+                        <ListView fx:id="searchList" prefHeight="199.0" prefWidth="793.0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                           <padding>
+                              <Insets right="10.0" />
+                           </padding></ListView>
                         <ComboBox fx:id="departmentChoice" onAction="#search" prefWidth="150.0" promptText="Department" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                        <ComboBox fx:id="endTimeChoice" onAction="#search" prefWidth="150.0" promptText="Ends Before" GridPane.columnIndex="5" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                        <ComboBox fx:id="endTimeChoice" onAction="#search" prefWidth="150.0" promptText="Ends Before" GridPane.columnIndex="5" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                           <GridPane.margin>
+                              <Insets right="10.0" />
+                           </GridPane.margin></ComboBox>
                         <ComboBox fx:id="startTimeChoice" onAction="#search" prefWidth="150.0" promptText="Starts After" GridPane.columnIndex="3" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                      </children>
                   </GridPane>
