--- a/app/src/main/resources/ScheduleGnome/savedScene.fxml
+++ b/app/src/main/resources/ScheduleGnome/savedScene.fxml
@@ -3,13 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="savedBackground" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.savedFXMLController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="800.0" styleClass="savedBackground" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScheduleGnome.savedFXMLController">
    <children>
       <Rectangle id="savedHeader" arcWidth="5.0" height="121.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="800.0" />
       <Text id="headerText" fill="WHITE" layoutX="18.0" layoutY="75.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Grove City College" wrappingWidth="500">
@@ -37,10 +38,12 @@
          </font>
       </Button>
       <Button id="compareButton" layoutX="520.0" layoutY="141.0" mnemonicParsing="false" onAction="#compareSchedules" text="Compare " />
-      <TilePane fx:id="scheduleTilePane" focusTraversable="true" hgap="15.0" layoutY="188.0" prefHeight="262.0" prefRows="2" prefTileHeight="75.0" prefTileWidth="100.0" prefWidth="506.0" tileAlignment="TOP_LEFT" vgap="50.0">
-         <padding>
-            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-         </padding>
-      </TilePane>
+      <ScrollPane hbarPolicy="NEVER" layoutY="200.0" prefWidth="800.0" styleClass="savedBackground">
+         <TilePane fx:id="scheduleTilePane" focusTraversable="true" hgap="15.0" minHeight="40.0" prefColumns="6" prefRows="2" prefTileHeight="75.0" prefTileWidth="100.0" prefWidth="800.0" styleClass="savedBackground" tileAlignment="TOP_LEFT" vgap="50.0">
+            <padding>
+               <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+            </padding>
+         </TilePane>
+      </ScrollPane>
    </children>
 </AnchorPane>
