--- a/app/src/main/resources/ScheduleGnome/compareSchedules.fxml
+++ b/app/src/main/resources/ScheduleGnome/compareSchedules.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -39,9 +40,16 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label prefHeight="17.0" prefWidth="101.0" text="        Monday" textAlignment="CENTER" GridPane.columnIndex="1" />
+                        <Label prefHeight="17.0" prefWidth="101.0" text="        Monday" textAlignment="CENTER" GridPane.columnIndex="1">
+                           <tooltip>
+                              <Tooltip text="HI" />
+                           </tooltip></Label>
                         <Label prefHeight="17.0" prefWidth="109.0" text="       Tuesday" GridPane.columnIndex="2" />
                         <Label prefHeight="17.0" prefWidth="108.0" text="     Wednesday" GridPane.columnIndex="3" />
                         <Label prefHeight="17.0" prefWidth="101.0" text="       Thursday" GridPane.columnIndex="4" />
